# ChangeLog for net-im/gnomemeeting
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/gnomemeeting/ChangeLog,v 1.52 2005/03/25 17:28:35 kugelfang Exp $

  25 Mar 2005; Danny van Dyk <kugelfang@gentoo.org>
  gnomemeeting-1.2.0.ebuild:
  Readded ~amd64 keyword.

  13 Mar 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/gnomemeeting-1.2.0-nosdl.patch, gnomemeeting-1.2.0.ebuild:
  Patch fixes compiling on systems without libsdl installed, closes #82811.

  06 Feb 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/gnomemeeting-1.00-gcc34.patch, gnomemeeting-1.00.ebuild:
  Added patch for gcc-3.4, provided by Christian Hartmann <ian@gentoo.org>
  (bug #80232).

  14 Jan 2005; <avatar@gentoo.org> gnomemeeting-1.2.0.ebuild:
  Added to ~ppc.

  10 Jan 2005; Stefan Knoblich <stkn@gentoo.org> gnomemeeting-1.2.0.ebuild:
  Updated the description to reflect recent changes in gnomeeting-1.2.0 (by request
  of gnomemeeting head developer).

  10 Jan 2005; Stefan Knoblich <stkn@gentoo.org> gnomemeeting-1.2.0.ebuild:
  Marked ~alpha.

  09 Jan 2005; Jason Wever <weeve@gentoo.org> gnomemeeting-1.2.0.ebuild:
  Added ~sparc keyword as it went missing in the version bump.

*gnomemeeting-1.2.0 (09 Jan 2005)

  09 Jan 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/gnomemeeting-1.2.0-gk-hang-fix.patch, +gnomemeeting-1.2.0.ebuild:
  New version, ebuild changes submitted by Stefan Schweizer
  <genstef@gentoo.org>, patch for gk issues included thx to Mihai Rusu
  <dizzy@roedu.net>

*gnomemeeting-1.0.2-r1 (22 Dec 2004)

  22 Dec 2004; Mike Gardiner <obz@gentoo.org> +gnomemeeting-1.0.2-r1.ebuild,
  gnomemeeting-1.0.2.ebuild:
  Call gnome2_pkg_postinst in our pkg_postinst() otherwise we don't install
  the gconf schema. Fixes bug #59764

  31 Oct 2004; Joseph Jezak <josejx@gentoo.org> gnomemeeting-1.0.2.ebuild:
  Marked ppc stable to fix compilation problems with GCC 3.4
