@@ -1,6 +1,9 @@
 # ChangeLog for net-im/gnomemeeting
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/gnomemeeting/ChangeLog,v 1.52 2005/03/25 17:28:35 kugelfang Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/gnomemeeting/ChangeLog,v 1.53 2005/04/10 20:23:46 stkn Exp $
+
+  10 Apr 2005; Stefan Knoblich <stkn@gentoo.org> -gnomemeeting-0.94.1.ebuild:
+  cleanup part #1
 
   25 Mar 2005; Danny van Dyk <kugelfang@gentoo.org>
   gnomemeeting-1.2.0.ebuild:
